@@ -1,0 +1,10 @@
+<?xml version='1.0' encoding='UTF-8' ?>
+
+<addon id='Animated_Lesson_Progress' xmlns="http://icplayer.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://icplayer.com ../../tools/addon.xsd">
+	<model>
+		<property name="Ranges" type="list">
+            <property name="Score" type="string"/>
+		    <property name="Image" type="image"/>
+		</property>
+	</model>
+</addon>
