@@ -1,0 +1,2 @@
+<div class="animated-lesson-progress-wrapper">
+</div>
