@@ -1,5 +1,6 @@
 Viewer_3D
 Advanced_Connector
+Animated_Lesson_Progress
 Animated_Page_Progress
 Animation
 Audio
