@@ -1,3 +1,4 @@
+2014-08-26 Added new module: Animated Lesson Progress
 2014-08-26 Added isVisited() method to icPlayer API
 2014-08-26 New gap type in Text module - filled gap
 2014-08-26 Added libraries ydp and CreateJS
